# python-project-lvl1

./: Makefile  README.md  pyproject.toml
BRAIN_GAMES/: cli.py  engine.py
BRAIN_GAMES/games/: calc.py  even_or_odd.py  gcd.py  prime.py  progression.py
BRAIN_GAMES/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
