[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["juuliadidenko <hiljaotsola2766@gmail.com>"]
packages = [
    { include = "BRAIN_GAMES" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "BRAIN_GAMES.scripts.brain_games:main"
brain-even = "BRAIN_GAMES.scripts.brain_even:main"
brain-calc = "BRAIN_GAMES.scripts.brain_calc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
